# wasm2spirv

./: .gitignore  Cargo.toml  LICENSE  README.md  STRUCTURE.md  TODO.md  config.json  justfile  saxpy.wat  saxpy_config.json  simple.wat  test.cpp  test.spv
.github/: FUNDING.yml
.github/_workflows/: release.yml
.github/workflows/: release.yml  test.yml
bindings/c/: .gitignore  Cargo.toml  justfile  test.c  wasm2spirv.h
bindings/c/include/: spirv.h  wasm2spirv-config.h  wasm2spirv-string.h  wasm2spirv.h
bindings/c/src/: alloc.rs  config.rs  error.rs  lib.rs  string.rs
bindings/c/tests/: saxpy.c  saxpy.wasm
bindings/js/: .gitignore  .prettierrc.json  Cargo.toml  LICENSE_MIT  generate_spirv.ts  index.js  jest.config.js  jsdoc.config.json  package.json
bindings/js/src/: lib.rs
bindings/js/tests/: saxpy.test.ts  test.ts
examples/: dot.json  saxpy.json  saxpy.wat
examples/cast/: cast.json  cast.wat  cast.zig
examples/dot/: dot.json  dot.wat  dot.zig
examples/fragment/: fragment.json  fragment.wat  fragment.zig
examples/min/: min.json  min.wat  min.zig
examples/saxpy/: saxpy.json  saxpy.wat
examples/square/: square.json  square.wat  square.zig
playground/: Cargo.toml  Dockerfile  index.html
playground/examples/: saxpy.rs  saxpy.zig
playground/installers/: zig.sh
playground/src/: api.rs  main.rs  rate_limit.rs  tmp.rs
playground/src/compiler/: mod.rs  rust.rs  zig.rs
playground/web/: highlight.js  index.css  index.html  index.js
playground/web/highlight/: highlight.min.js
playground/web/highlight/highlightjs-zig/: LICENSE  README.md  package.json
playground/web/highlight/highlightjs-zig/src/languages/: zig.js
playground/web/highlight/highlightjs-zig/test/detect/zig/: default.txt
playground/web/highlight/highlightjs-zig/test/markup/zig/: default.expect.txt
queries/: hlsl-highlights.scm
src/: capabilities.rs  cli.rs  config.rs  decorator.rs  error.rs  lib.rs  translation.rs  type.rs  version.rs  wasm.rs
src/ast/: block.rs  function.rs  import.rs  mod.rs  module.rs
src/ast/block/: mvp.rs
src/ast/values/: bool.rs  float.rs  integer.rs  mod.rs  pointer.rs  schrodinger.rs  vector.rs
src/binary/: deserialize.rs  serialize.rs
src/compilers/: mod.rs  naga.rs  spvc.rs  spvt.rs
src/fg/: block.rs  extended_is.rs  function.rs  import.rs  mod.rs  module.rs
src/fg/block/: mvp.rs
src/fg/values/: bool.rs  float.rs  integer.rs  mod.rs  pointer.rs  vector.rs
src/translation/: block.rs  function.rs  mod.rs  module.rs
src/translation/block/: mvp.rs
src/translation/values/: float.rs  integer.rs  mod.rs  pointer.rs  schrodinger.rs
tests/: test.rs
