[package]
name = "wasm2spirv"
description = "Compile your WebAssembly programs into SPIR-V shaders"
version = "0.1.1"
edition = "2021"
keywords = ["wasm", "spirv", "vulkan", "webassembly", "compiler"]
categories = [
    "compilers",
    "development-tools",
    "game-development",
    "graphics",
    "wasm",
]
repository = "https://github.com/Aandreba/wasm2spirv"
license = "MIT"

[package.metadata.docs.rs]
features = ["khronos-all", "naga-wgsl"]
targets = [
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Macro features
cli = ["clap", "color-eyre", "serde_json"]
khronos-all = ["spvt-validate", "spvc-glsl", "spvc-hlsl", "spvc-msl"]
naga-all = ["naga-validate", "naga-glsl", "naga-hlsl", "naga-msl", "naga-wgsl"]
# SPIR-V Cross compilers
spvc-glsl = ["spirv_cross", "spirv_cross/glsl"]
spvc-hlsl = ["spirv_cross", "spirv_cross/hlsl"]
spvc-msl = ["spirv_cross", "spirv_cross/msl"]
spvt-validate = ["spirv-tools"]
# Naga compilers
naga-glsl = ["naga", "naga/glsl-out"]
naga-hlsl = ["naga", "naga/hlsl-out"]
naga-msl = ["naga", "naga/msl-out"]
naga-wgsl = ["naga", "naga/wgsl-out"]
naga-validate = ["naga", "naga/validate"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "wasm2spirv"
path = "src/cli.rs"
required-features = ["clap", "color-eyre", "serde_json"]

[dependencies]
clap = { version = "4.3.16", optional = true, features = ["derive", "env"] }
color-eyre = { version = "0.6.2", optional = true }
docfg = "0.1.0"
naga = { version = "0.13.0", features = ["spv-in"], optional = true }
num_enum = "0.6.1"
once_cell = "1.18.0"
rspirv = "0.11.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.103", optional = true }
spirv = { version = "0.2.0", features = ["serde", "serialize", "deserialize"] }
spirv-tools = { version = "0.9.0", optional = true }
spirv_cross = { version = "0.23.1", optional = true }
thiserror = "1.0.43"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
vector_mapp = { version = "0.3.2", features = ["serde"] }
wasmparser = "0.109.0"
wat = "1.0.67"

[dev-dependencies]
color-eyre = "0.6.2"
serde_json = "1.0.103"
