[package]
name = "wasm2spirv-c"
edition.workspace = true
version.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["spvc", "spvt"]
spvc = ["wasm2spirv/spvc-all"]
spvt = ["wasm2spirv/spvt-all"]
naga = ["wasm2spirv/naga-all"]

[dependencies]
docfg = "0.1.0"
elor = "1.1.4"
libc = "0.2.147"
serde_json = "1.0.104"
spirv = "0.2.0"
wasm2spirv = { version = "0.1.1", path = "../..", features = ["naga-wgsl"] }
