[package]
name = "wasm2spirv-js"
version = "0.1.0"
authors = ["Aandreba <aandrebafreelancer@gmail.com>"]
edition = "2018"

[lib]
name = "wasm2spirv"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm2spirv = { version = "0.1.1", path = "../..", features = ["naga-all", "spvc-glsl", "spvc-hlsl", "spvc-msl"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
